--- a/index.html
+++ b/index.html
@@ -24,5 +24,24 @@
         <footer>Visitor</footer>
       </blockquote>
     </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <h3>Bronze</h3>
+            <p>Aw</p>
+            <h6>A</h6>
+        </div>
+        <div class="col-md-4">
+          <h3>Silver</h3>
+            <p>Aw</p>
+            <h6>A</h6>
+        </div>
+        <div class="col-md-4">
+          <h3>Gold</h3>
+            <p>A</p>
+            <h6>A</h6>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
