Add style and content to columns in row.

--- a/index.html
+++ b/index.html
@@ -27,19 +27,37 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4">
+          <div class="bronze">
           <h3>Bronze</h3>
-            <p>Aw</p>
-            <h6>A</h6>
+            <p>The bronze package includes:</p>
+            <ul>
+              <li>Visit the moon.</li>
+              <li>Return to Earth.</li>
+            <h6>$6M</h6>
+          </div>
         </div>
         <div class="col-md-4">
+          <div class="silver">
           <h3>Silver</h3>
-            <p>Aw</p>
-            <h6>A</h6>
+            <p>The silver package includes:</p>
+            <ul>
+              <li>Bronze package.</li>
+              <li>Tour for great photo locations.</li>
+              <li>Comfortable bio-dome.</li>
+            <h6>$15M</h6>
+          </div>
         </div>
         <div class="col-md-4">
+          <div class="gold">
           <h3>Gold</h3>
-            <p>A</p>
-            <h6>A</h6>
+            <p>The gold package includes:</p>
+            <ul>
+              <li>Silver package.</li>
+              <li>Rocket ship ride tour.</li>
+              <li>Alien visit?</li>
+              <li>Souvenir package.</li>
+            <h6>$20M</h6>
+          </div>
         </div>
       </div>
     </div>
